# snarklang

./: CMakeLists.txt
src/: main.c  tokenizer.c  tokenizer.h
